// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileDownload component snapshot download is completed 1`] = `
<StatefulButton
  disabledStates={
    Array [
      "pending",
      "complete",
    ]
  }
  icons={
    Object {
      "complete": <Icon
        className="fa fa-check"
      />,
      "default": <Icon
        className="fa fa-download"
      />,
      "failed": <Icon
        className="fa fa-refresh"
      />,
      "pending": <Icon
        className="fa fa-spinner fa-spin"
      />,
    }
  }
  labels={
    Object {
      "complete": <FormattedMessage
        defaultMessage="Downloaded!"
        description="Download files completed state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloaded"
      />,
      "default": <FormattedMessage
        defaultMessage="Download files"
        description="Download files inactive state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloadFiles"
      />,
      "failed": <FormattedMessage
        defaultMessage="Retry download"
        description="Download files failed state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.retryDownload"
      />,
      "pending": <FormattedMessage
        defaultMessage="Downloading"
        description="Download files pending state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloading"
      />,
    }
  }
  onClick={[MockFunction this.props.downloadFiles]}
  state="completed"
/>
`;

exports[`FileDownload component snapshot download is failed 1`] = `
<StatefulButton
  disabledStates={
    Array [
      "pending",
      "complete",
    ]
  }
  icons={
    Object {
      "complete": <Icon
        className="fa fa-check"
      />,
      "default": <Icon
        className="fa fa-download"
      />,
      "failed": <Icon
        className="fa fa-refresh"
      />,
      "pending": <Icon
        className="fa fa-spinner fa-spin"
      />,
    }
  }
  labels={
    Object {
      "complete": <FormattedMessage
        defaultMessage="Downloaded!"
        description="Download files completed state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloaded"
      />,
      "default": <FormattedMessage
        defaultMessage="Download files"
        description="Download files inactive state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloadFiles"
      />,
      "failed": <FormattedMessage
        defaultMessage="Retry download"
        description="Download files failed state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.retryDownload"
      />,
      "pending": <FormattedMessage
        defaultMessage="Downloading"
        description="Download files pending state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloading"
      />,
    }
  }
  onClick={[MockFunction this.props.downloadFiles]}
  state="failed"
/>
`;

exports[`FileDownload component snapshot download is inactive 1`] = `
<StatefulButton
  disabledStates={
    Array [
      "pending",
      "complete",
    ]
  }
  icons={
    Object {
      "complete": <Icon
        className="fa fa-check"
      />,
      "default": <Icon
        className="fa fa-download"
      />,
      "failed": <Icon
        className="fa fa-refresh"
      />,
      "pending": <Icon
        className="fa fa-spinner fa-spin"
      />,
    }
  }
  labels={
    Object {
      "complete": <FormattedMessage
        defaultMessage="Downloaded!"
        description="Download files completed state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloaded"
      />,
      "default": <FormattedMessage
        defaultMessage="Download files"
        description="Download files inactive state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloadFiles"
      />,
      "failed": <FormattedMessage
        defaultMessage="Retry download"
        description="Download files failed state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.retryDownload"
      />,
      "pending": <FormattedMessage
        defaultMessage="Downloading"
        description="Download files pending state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloading"
      />,
    }
  }
  onClick={[MockFunction this.props.downloadFiles]}
  state="default"
/>
`;

exports[`FileDownload component snapshot download is pending 1`] = `
<StatefulButton
  disabledStates={
    Array [
      "pending",
      "complete",
    ]
  }
  icons={
    Object {
      "complete": <Icon
        className="fa fa-check"
      />,
      "default": <Icon
        className="fa fa-download"
      />,
      "failed": <Icon
        className="fa fa-refresh"
      />,
      "pending": <Icon
        className="fa fa-spinner fa-spin"
      />,
    }
  }
  labels={
    Object {
      "complete": <FormattedMessage
        defaultMessage="Downloaded!"
        description="Download files completed state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloaded"
      />,
      "default": <FormattedMessage
        defaultMessage="Download files"
        description="Download files inactive state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloadFiles"
      />,
      "failed": <FormattedMessage
        defaultMessage="Retry download"
        description="Download files failed state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.retryDownload"
      />,
      "pending": <FormattedMessage
        defaultMessage="Downloading"
        description="Download files pending state label"
        id="ora-grading.ResponseDisplay.SubmissionFiles.downloading"
      />,
    }
  }
  onClick={[MockFunction this.props.downloadFiles]}
  state="pending"
/>
`;
